<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="@color/Forest_Shadow"
        android:elevation="4dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/context_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/grape_nuts_regular"
            android:text="@string/home"
            android:textColor="@color/Desert_Blush"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sour_gummy_variable_font_wdth_wght"
            android:text="@string/welcome"
            android:textColor="@color/Desert_Blush"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sour_gummy_variable_font_wdth_wght"
            android:textColor="@color/Desert_Blush"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:contentDescription="@string/cart"
            android:src="@drawable/shopping_cart"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/home"
            android:padding="10dp"
            android:src="@drawable/home"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/addCategory_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/Add"
            android:src="@drawable/baseline_add_24"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:src="@drawable/logout"
            android:visibility="visible" />

    </RelativeLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white" >



    </androidx.fragment.app.FragmentContainerView>



</androidx.constraintlayout.widget.ConstraintLayout>